@@ -1,3 +1,14 @@
+2012-04-23  Filip Pizlo  <fpizlo@apple.com>
+
+        DFG must keep alive values that it will perform speculations on
+        https://bugs.webkit.org/show_bug.cgi?id=84638
+        <rdar://problem/11258183>
+
+        Reviewed by Oliver Hunt.
+
+        * dfg/DFGNodeType.h:
+        (DFG):
+
 2012-04-23  Oliver Hunt  <oliver@apple.com>
 
         Fix non-LLInt builds by temporarily removing an over-enthusiastic assertion
